# ai-first-dev-bootcamp

./: .gitignore  render.yaml
week_1_ai_first/: RESTROPECTIVE.md  SPEC.md  main.py
week_1_ai_first/app/: main.py  models.py
week_1_ai_first/sprint_1/: AI_LOG.md  DEPLOYMENT-GUIDE.md  PEER-REVIEW-NOTES.md  README.md  SPEC.md
week_1_ai_first/sprint_1/app/: __init__.py  main.py
week_1_ai_first/sprint_1/tests/: conftest.py  test_workouts.py
week_1_ai_first/sprint_2/: AI_LOG.md  PEER-REVIEW-NOTES.md  README.md  SPEC.md  codeinsight_cli.py  pyproject.toml  requirements.txt
week_1_ai_first/sprint_2/code-insight/: __init__.py  cli.py  main.py
week_1_ai_first/sprint_2/code-insight/commands/: analyze.py  explain.py  find_errors.py  summarize.py  tree.py
week_1_ai_first/sprint_2/code-insight/mcp/: __init__.py  client.py  filesystem.py
week_1_ai_first/sprint_2/code_insight_cli.egg-info/: SOURCES.txt
week_1_ai_first/sprint_2/codeinsight/: cli.py  main.py
week_1_ai_first/sprint_2/codeinsight/commands/: __init__.py  analyze.py  explain.py  find_errors.py  summarize.py  tree.py
week_1_ai_first/sprint_2/codeinsight/mcp/: __init__.py  filesystem.py
week_1_ai_first/sprint_2/codeinsight_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
week_1_ai_first/sprint_2/tests/: conftest.py  test_analyze.py  test_cli.py  test_explain.py  test_find_errors.py  test_mcp_filesystem.py  test_summarize.py  test_tree.py
week_1_ai_first/tests/: test_workouts.py
week_2_ls_rag/scrape_documents/: fastapi_scraper.py
(+4 files in other folders)
